Rolled back css AGAIN because the About page section was fucked up. Argh

--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,7 @@ a {
   text-decoration: none;
 }
 
-h1, h3, h4, h5 {
+h1, h2, h3, h4, h5 {
   color: #fff;
   line-height: 1.5;
   width: 100%;
@@ -131,7 +131,6 @@ h1 {
 h2 {
   font-size: 2rem;
   font-weight: bold;
-  color:#c79d2f;
 }
 
 h3 {
@@ -428,6 +427,12 @@ nav a.active {
   width: 100%;
 }
 
+/* #projects p {
+  text-align: center;
+  color:#dddddd;
+  width: 100%;
+} */
+
 .project-description, 
 .project-skills {
   text-align: left;
@@ -626,19 +631,11 @@ nav a.active {
   text-align: left;
 } */
 
-.faq-questions {
-  color: #c79d2f;
+.faq h4 {
   margin: 80px 0 30px 0;
 }
 
-/* .faq p {
-  text-align: left;
-  width: 37em;
-  margin: auto;
-} */
-
-.service-page,
-.faq-page {
+.service-page {
   text-align: center;
 }
 
@@ -649,18 +646,16 @@ nav a.active {
   width: 85%;
 }
 
-.services h2 {
-  font-size: 2rem;
+.services h1 {
+  font-size: 3.25rem;
   font-family: 'Signika Negative', Helvetica, Arial, sans-serif;
   font-weight: 600;
-  color: #c79d2f;
   line-height: 1.5;
   padding-bottom: 140px;
   width: 100%;
 }
 
-.services,
-.faqs {
+.services {
   display: flex;
   justify-content: space-between;
   flex-flow: column;
