Added faq-page span. Need to work out why it doesn't work when the servcie and faq class are put to together

--- a/css/main.css
+++ b/css/main.css
@@ -648,6 +648,12 @@ nav a.active {
 .service-page span {
   color: #c79d2f;
 }
+
+.faq-page span {
+  color: #c79d2f;
+}
+
+
 .services .content-wrapper {
   width: 85%;
 }
